src/template_augmentation/snapshots/crust_boot_you__template_augmentation__regex_replacer__testing__regex_arrow_a_b_precent_r_arrow.snap
---
source: src/template_augmentation/regex_replacer.rs
expression: actual
---

                    {{world}} P x!!x C
                     %%a?b%%
