src/template_augmentation/snapshots/crust_boot_you__template_augmentation__regex_replacer__testing__regex_double_precent.snap
---
source: src/template_augmentation/regex_replacer.rs
expression: actual
---
aa aaa {{value to get}} {{!!?A}} {{!!?B}} BBB 
                   P x!!x C  {{world}} P x!!x C
                      b
        
